Project

General

Profile

Actions

Bug #38578

closed

pool recovery_priority may break the ordering of Ceph's internal priority computations

Added by xie xingguo about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Monitor
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

See https://github.com/ceph/ceph/pull/26705 for a detailed description.

Actions #1

Updated by David Zafman about 5 years ago

  • Pull request ID set to 26729
Actions #2

Updated by xie xingguo about 5 years ago

  • Status changed from New to Resolved
Actions #3

Updated by xie xingguo about 5 years ago

  • Backport deleted (luminous,mimic)
Actions

Also available in: Atom PDF